--- a/SuicaPasmoReader/src/main/res/layout/fragment_main.xml
+++ b/SuicaPasmoReader/src/main/res/layout/fragment_main.xml
@@ -47,7 +47,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/read_label" >
+                    android:text="@string/read_label"
+                    android:onClick="onClick">
                 </Button>
 
                 <Button
@@ -55,7 +56,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/history_label" >
+                    android:text="@string/history_label"
+                    android:onClick="onClick">
                 </Button>
 
                 <Button
@@ -72,7 +74,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
                     android:layout_weight="1"
-                    android:text="@string/felicalite_label" >
+                    android:text="@string/felicalite_label"
+                    android:onClick="onClick">
                 </Button>
             </LinearLayout>
         </LinearLayout>
