--- a/SuicaPasmoReader/src/main/res/menu/main.xml
+++ b/SuicaPasmoReader/src/main/res/menu/main.xml
@@ -8,9 +8,9 @@
         android:orderInCategory="100"
         android:icon="@drawable/ic_action_refresh"
         app:showAsAction="ifRoom" />
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
+    <item android:id="@+id/action_save"
+        android:title="@string/action_save"
         android:orderInCategory="100"
-        android:icon="@android:drawable/ic_menu_preferences"
+        android:icon="@drawable/ic_action_save"
         app:showAsAction="ifRoom" />
 </menu>
