--- a/SuicaPasmoReader/src/main/res/menu/main.xml
+++ b/SuicaPasmoReader/src/main/res/menu/main.xml
@@ -13,4 +13,9 @@
         android:orderInCategory="100"
         android:icon="@drawable/ic_action_save"
         app:showAsAction="ifRoom" />
+    <item android:id="@+id/action_settings"
+        android:title="@string/action_settings"
+        android:orderInCategory="100"
+        android:icon="@drawable/ic_action_settings"
+        app:showAsAction="ifRoom" />
 </menu>
